--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ b {
 
 
 
-<div class="landing"><p><h1>mo'olelo molokai</h1></p><p><h2>disease in the borderlands</h2></p></div>
+<div class="landing"><p><h1>mo'olelo moloka'i</h1></p><p><h2>disease in the borderlands</h2></p></div>
 
 <div class="main"><center>
 
